--- a/src/views/App.scss
+++ b/src/views/App.scss
@@ -17,10 +17,10 @@
 .App-header {
     background-color: #282c34;
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    // justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
 }
@@ -39,12 +39,14 @@
 }
 
 .btn {
-    width: 100px;
-    height: 50px;
     padding: 10px 40px;
     margin-top: 20px;
     align-items: center;
     border-radius: 10px;
     cursor: pointer;
     background-color: #ccc;
+}
+
+.icon {
+    cursor: pointer;
 }
